@@ -225,6 +225,7 @@ public:
 	v_camera_names.push_back(":Fccd960.");
 	v_camera_names.push_back(":Rayonix.");
 	v_camera_names.push_back(":Zyla.");
+  v_camera_names.push_back(":iStar.");
 	v_camera_names.push_back(":ControlsCamera.");
 
         prbits = (print_bits & 8) ? 255 : 0;
